Revert java version back to java8
I'm trying to rollback to java 8 to see if it's compatible to prestodb and hive

Please clarify why the changes are needed. For instance,
  1. If you propose a new API, clarify the use case for a new API.
  2. If you fix a bug, describe the bug.

Please list the user-facing changes introduced by your change, including
  1. change in user-facing APIs
  2. addition or removal of property keys
  3. webui

			pr-link: Alluxio/alluxio#17751
			change-id: cid-ef100538c3abd0a5e3d74be030defc723a5c8cef